--- a/.env
+++ b/.env
@@ -3,5 +3,6 @@
 TMDB_KEY= "f29da1a0f404dcf4593279a0316b2c73"
 # Those env variable are not mandatory
 # Queste variabili non sono obbligatoria
-PROXY = ["http://nepmerri-rotate:z3vdxrsg8fsa@p.webshare.io:80",]
+PROXY = ["http://nepmerri-rotate:z3vdxrsg8fsa@p.webshare.io:80"]
 # FORWARDPROXY = "YOURFORWARDPROXY/" 
+FORWARDPROXY= ["http://nepmerri-rotate:z3vdxrsg8fsa@p.webshare.io:80/"]
